@@ -51,9 +51,20 @@ EOW1
     exit 0;
 }
 
-chomp($aug_cflags, $aug_libs) ;
+my $aug_version = `pkg-config --modversion augeas` ;
+chomp($aug_cflags, $aug_libs, $aug_version) ;
 
-print "Using $aug_libs and $aug_cflags to compile\n" ;
+if (   not defined $aug_version or ( $aug_version lt '0.3.4')) {
+    warn << "EOW2" ;
+***
+*** 'pkg-config' did find augeas version $aug_version but 
+*** version 0.3.4 minimum is required
+***
+EOW2
+    exit 0;
+}
+
+print "Using $aug_libs and $aug_cflags to compile (Augeas version $aug_version)\n" ;
 
 
 my $build = Module::Build->new
@@ -68,7 +79,7 @@ my $build = Module::Build->new
    extra_compiler_flags => $aug_cflags,
    extra_linker_flags   => $aug_libs,
 
-   add_to_cleanup => [qw!wr_test _build lib/Config/Augeas.c lib/Config/Augeas.o! ] ,
+   add_to_cleanup => [qw!wr_test _build augeas-root lib/Config/Augeas.c lib/Config/Augeas.o! ] ,
   );
 
 
